[project]
name = "langchain-rag"
dynamic = ["version"]
description = "This is a temporary project while I wait for my langchain [pull-request](https://github.com/langchain-ai/langchain/pull/7278) to be validated."
authors = [
    { name = "Philippe PRADOS" }
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain>=1.2.0",
    "jupyter>=1.0.0",
    "greenlet>=3.3.0",
]

[project.urls]
Repository = "https://www.github.com/pprados/langchain-rag"
Homepage = "https://www.github.com/pprados/langchain-rag"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["langchain_rag"]

[dependency-groups]
dev = [
    "playwright>=1.28.0",
    "setuptools>=67.6.1",
    "ipython",
    "ipykernel",
    "jupyter>=1.0",
    "jupyterlab_rise>=0.42",
    "pre-commit>=3.6",
    "twine>=5.1.0",
    "importlib-metadata==7.2.1",
]
test = [
    # The only dependencies that should be added are
    # dependencies used for running tests (e.g., pytest, freezegun, response).
    # Any dependencies that do not meet that criteria will be removed.
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-watcher>=0.2.6",
    "freezegun>=1.2.2",
    "responses>=0.22.0",
    "pytest-asyncio>=0.20.3",
    "pytest-mock>=3.10.0",
    "pytest-socket>=0.6.0",
    "syrupy>=4.0.2",
    "wikipedia",
    "chromadb>=0.4.10",
    "aiosqlite",
    "pgvector",
    "psycopg2-binary",
    "langchain_openai>=1.1",
    #langchain-qa_with_references = { path = "../langchain-qa_with_references", develop = true }
    #langchain-qa_with_references = "^0.0.330"
    "faiss-cpu>=1",
    "lark>=1.1",
    "hnswlib>=0.8.0"
]
lint = [
    "mypy>=1.8",
    "ruff>=0.1.9",
    "types-toml>=0.10.8.1",
    "types-redis>=4.3.21.6",
    "types-pytz>=2023.3.0.0",
    "black[jupyter]>=23.1.0",
    "types-chardet>=5.0.4.6",
    "mypy-protobuf>=3.0.0",
    "types-google-cloud-ndb>=2.0",
    "types-docutils>=0.20",
    "types-pyyaml>=6.0.12.2",
    "types-requests>=2.28.11.5",
]
codespell = [
    "codespell>=2.2.5",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,uv.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
# whats is a typo but used frequently in queries so kept as is
# aapply - async apply
# unsecure - typo but part of API, decided to not bother for now
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate'

[tool.ruff]
exclude = [
  "tests/integration_tests/examples/non-utf8-encoding.py",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
# Notebooks have a different coding style:
# - E402: imports not at top (educational structure)
# - E501: line too long (comments, pip install commands)
# - F403/F405: star imports (simplified examples)
# - F821: undefined names (may be defined in other cells)
"*.ipynb" = ["E402", "E501", "F403", "F405", "F821"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = []

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5 -vv"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "requires: mark tests as requiring a specific library",
  "scheduled: mark tests to run in scheduled testing",
  "compile: mark placeholder test used to compile integration tests without running them"
]
asyncio_mode = "auto"
